@@ -1,3 +1,7 @@
+2000-09-07  Jeff Freedman  <jeff@amy.nerble.net>
+
+	* Schedules:  Duel, kid_games, wander, mine, farm.
+
 2000-09-06  Jeff Freedman  <jeff@patches.simutech.com>
 
 	* More schedules:  Waiter, thief, preach, eat_at_inn.
